all done! media query

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  
   <link rel="shortcut icon" href="./image/extra.jpg">
   <link rel="stylesheet" href="./style.css">
 
@@ -46,8 +49,8 @@
   <div id="planet">
 
     <p id="galaxy">GALAXY</p>
-    <p class="text-galaxy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rerum autem! Lorem ipsum dolor, sit amet consectetur</p>
-    <p class="text-galaxy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, dolorum.</p>
+    <p class="text-galaxy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rerum autem! Lorem ipsum dolor.</p>
+    <p class="text-galaxy">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
 
           <br />
     <button class="explore">explore</button>
@@ -96,3 +99,5 @@
 
 </body>
 </html>
+
+
